--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "p-prompt-planner",
+  "name": "p-prompt-surat-resilient",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.3.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.263.1"
+    "lucide-react": "^0.263.1",
+    "firebase": "^11.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
